进一步完善页面跳转，增加cookie的保存用户名及密码实现页面跳转，购物的头部

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 	</div>
 	<div class="top_logain">
 		<div class="top_logain_box">
-			<ul class="ul_logain_left">
+			<ul id="ul_id_one" class="ul_logain_left">
 				<li id="li_vip">
 					<a id="li_vip_a" class="logain_vip_a" href="#">
 						国美会员
@@ -105,7 +105,7 @@
 					<div id="vip_guoMei" class="vip_guoMei_div">
 						<div>
 							<span>欢迎来到国美，
-								<a href="#">
+								<a href="logain.html">
 									请登录！
 								</a>
 							</span>
@@ -165,13 +165,89 @@
 						</div>
 					</div>
 				</li>
-				<li><a class="logain_a_cl" href="#">登录</a></li>
+				<li><a class="logain_a_cl" href="logain.html">登录</a></li>
 				<li>
-					<a class="logain_gift_a" href="#">注册有礼
+					<a class="logain_gift_a" href="register.html">注册有礼
 						<b></b>
 					</a>
 				</li>
 			</ul>
+			<ul id="ul_id_two" class="ul_logain_left ul_logain_left2">
+				<li id="li_vip2">
+					<a id="li_vip_a2" class="logain_vip_a" href="#">
+						<i id="guoMeiUser" style="font-style:normal"></i>
+						<b></b>
+					</a>
+					<div id="vip_guoMei_logain" class="vip_guoMei_div vip_guoMei_div_logain">
+						<div>
+							<span>
+								<i id="userId" style="display: block;width:100px;height:16px;"></i>
+								<i class="i_div_dengji">65/0</i>
+								<i>升级到下一级还需要1个购物天数</i>
+							</span>
+						</div>
+						<div>
+							<span>我的3项特权</span>
+							<span>
+								<a href="#">
+									会员俱乐部
+								</a>
+							</span>
+						</div>
+						<div class="div_chou_box">
+							<ul class="ul_banner_vip">
+								<li id="btn_left2" class="ul_banner_li_1"></li>
+								<li id="btn_center" class="ul_banner_li_2">
+									<ul id="btn_center_ul2" class="ul_Lock">
+										<li class="ul_li_lock">
+											<a href="#">
+												美豆抽奖
+											</a>
+										</li>
+										<li class="ul_li_lock ul_li_lock_f2">
+											<a href="#">
+												退换货保障		
+											</a>
+										</li>										
+										<li class="ul_li_lock ul_li_lock_f3">
+											<a href="#">
+												价格保护
+											</a>
+										</li>										
+										<li class="ul_li_lock ul_li_lock_f4">
+											<a href="#">
+												消费的美豆
+											</a>
+										</li>										
+										<li class="ul_li_lock ul_li_lock_f5">
+											<a href="#">
+												专属阶梯价
+											</a>
+										</li>										
+										<li class="ul_li_lock ul_li_lock_f6">
+											<a href="#">
+												生日礼包
+											</a>
+										</li>
+										<li class="ul_li_lock ul_li_lock_f7">
+											<a href="#">
+												更多精彩
+											</a>
+										</li>									
+									</ul>
+								</li>
+								<li id="btn_right2" class="ul_banner_li_3"></li>
+							</ul>
+						</div>
+					</div>
+				</li>
+				<li>
+					<a id="quit_btn" class="logain_gift_a" href="#">退出
+						<b></b>
+					</a>
+				</li>
+			</ul>
+
 			<ul class="ul_logain_right">
 				<li class="right_gm_li li_1_2">
 					<a class="right_gm_a" href="#">我的订单</a>
@@ -408,7 +484,7 @@
 				<ul id="navBigUl" class="nav_big_ul">
 					<li>
 						<h5>
-							<a href="#">商品</a><a href="#">手机</a>
+							<a href="#">手机</a><a href="#">充值</a>
 						</h5>
 						<div class="shouji_div_box">
 							<div class="shouji_box_left">
@@ -536,7 +612,8 @@
 					</li>
 					<li>
 						<h5>
-							<a href="#">商品</a><a href="#">手机手机</a>
+							<a href="#">电脑</a><a href="#"></a>
+							<a href="#">办公配件</a><a href="#"></a>
 						</h5>
 						<div class="shouji_div_box fu_yong_3">
 							<div class="shouji_box_left">
@@ -620,7 +697,7 @@
 					</li>
 					<li>
 						<h5>
-							<a href="#">商品</a><a href="#">手机</a><a href="#">商品</a>
+							<a href="#">电视</a><a href="#">影音</a><a href="#">智能</a>
 						</h5>
 						<div class="shouji_div_box fu_yong_4">
 							<div class="shouji_box_left">
@@ -704,7 +781,7 @@
 					</li>
 					<li>
 						<h5>
-							<a href="#">商品</a><a href="#">手机</a><a href="#">手机手</a>
+							<a href="#">空调</a><a href="#">冰箱</a><a href="#">洗衣机</a>
 						</h5>
 						<div class="shouji_div_box fu_yong_5">
 							<div class="shouji_box_left">
@@ -788,7 +865,7 @@
 					</li>
 					<li>
 						<h5>
-							<a href="#">手机手机</a><a href="#">手机手机</a><a href="#">商品</a>
+							<a href="#">厨房卫浴</a><a href="#">生活家电</a><a href="#">环境</a>
 						</h5>
 						<div class="shouji_div_box fu_yong_6">
 							<div class="shouji_box_left">
@@ -872,7 +949,7 @@
 					</li>
 					<li>
 						<h5>
-							<a href="#">商品</a><a href="#">手机</a><a href="#">手机手机</a>
+							<a href="#">家具</a><a href="#">建材</a><a href="#">欧洲厨房</a>
 						</h5>
 						<div class="shouji_div_box fu_yong_7">
 							<div class="shouji_box_left">
@@ -956,42 +1033,42 @@
 					</li>
 					<li>
 						<h5>
-							<a href="#">好多对象</a><a href="#">手机手机</a>
+							<a href="#">家具家纺</a><a href="#">家居家装</a>
 						</h5>
 					</li>
 					<li>
 						<h5>
-							<a href="#">好多对象</a>
+							<a href="#">食品酒水</a>
 						</h5>
 					</li>
 					<li>
 						<h5>
-							<a href="#">好多对象</a>
+							<a href="#">母婴玩具</a>
 						</h5>
 					</li>
 					<li>
 						<h5>
-							<a href="#">好多对象</a>
+							<a href="#">美妆个护</a>
 						</h5>
 					</li>
 					<li>
 						<h5>
-							<a href="#">好多对象</a><a href="#">手机手机</a>
+							<a href="#">服饰鞋帽</a><a href="#">箱包奢品</a>
 						</h5>
 					</li>
 					<li>
 						<h5>
-							<a href="#">好多对象</a><a href="#">手机手机</a>
+							<a href="#">运动户外</a><a href="#">珠宝首饰</a>
 						</h5>
 					</li>
 					<li>
 						<h5>
-							<a href="#">好多对象</a><a href="#">手机手机</a>
+							<a href="#">汽车整车</a><a href="#">汽车用品</a>
 						</h5>
 					</li>
 					<li>
 						<h5>
-							<a href="#">好多对象</a>
+							<a href="#">国美管家</a>
 						</h5>
 				</ul>
 			</div>
@@ -2249,6 +2326,7 @@
 
 </body>
 </html>
+<script type="text/javascript" src="js/cookieTools.js"></script>
 <script type="text/javascript" src="js/BannerPlay.js"></script>
 <script type="text/javascript" src="js/Tools.js"></script>
 <script type="text/javascript" src="js/jquery-1.8.3.min.js"></script>
