--- a/shoppingCar.html
+++ b/shoppingCar.html
@@ -9,7 +9,7 @@
 <title>购物车</title>
 </head>
 
-<body>
+<body style="height:1000px;">
     <!-- 头部 -->
     <!-- header -->
     <header>
@@ -360,8 +360,30 @@
         </div>
     </div>
     <!-- 配送地址 -->
-    <div class="addres">
+    <div class="addres">    
         <div class="addres_box">
+            
+        </div>
+    </div>
+    <!-- 购物车 -->
+    <div class="shoppingCar">
+        <div class="shopping_car_box">
+            <div class="shopping_car_tit">
+                <ul>
+                    <li><input id="allCheckboxId" type="checkbox"></li>
+                    <li>全选</li>
+                    <li>商品信息</li>
+                    <li>单价</li>
+                    <li>数量</li>
+                    <li>小计</li>
+                    <li>操作</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <!-- 结算 -->
+    <div class="settlement">
+        <div class="settlement_box">
             
         </div>
     </div>
@@ -369,6 +391,7 @@
 </body>
 
 </html>
+
 <script type="text/javascript" src="js/cookieTools.js"></script>
 <script type="text/javascript" src="js/Tools.js"></script>
 <script type="text/javascript" src="js/jquery-1.8.3.min.js"></script>
