--- a/shoppingCar.html
+++ b/shoppingCar.html
@@ -395,5 +395,6 @@
 <script type="text/javascript" src="js/cookieTools.js"></script>
 <script type="text/javascript" src="js/Tools.js"></script>
 <script type="text/javascript" src="js/jquery-1.8.3.min.js"></script>
+<script type="text/javascript" src="js/checkAll.js"></script>
 <script type="text/javascript" src="js/index.js"></script>
 <script type="text/javascript" src="js/shoppingCar.js"></script>
