购物车的加减问题 新开始了商品详情也存在问题

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>国美(GOME)-综合网购商城，正品低价、品质保障、快速送达、安心服务！</title>
 <link rel="stylesheet" href="css/index.css">
-<!-- <link rel="shortcut icon" href="indexImg/favicon.ico" /> -->
+<link rel="shortcut icon" href="indexImg/favicon.ico" />
 <link rel="stylesheet" type="text/css" href="css/iconfont.css">
 </head>
 <body>
@@ -466,7 +466,7 @@
 				<div class="shopping_box">
 					<span>0</span>
 					<b></b>
-					<a href="#">我的购物车</a>
+					<a href="shoppingCar.html">我的购物车</a>
 					<i></i>
 				</div>
 				<div class="shopping_car_2">
