--- a/shoppingCar.html
+++ b/shoppingCar.html
@@ -367,8 +367,8 @@
     </div>
     <!-- 购物车 -->
     <div class="shoppingCar">
-        <div class="shopping_car_box">
-            <div class="shopping_car_tit">
+        <div id="shoppingCarBox" class="shopping_car_box">
+            <div id="" class="shopping_car_tit">
                 <ul>
                     <li><input id="allCheckboxId" type="checkbox"></li>
                     <li>全选</li>
@@ -387,6 +387,67 @@
             
         </div>
     </div>
+
+    
+    <!-- 底部 -->
+<div class="foot">
+	<div class="foot_box">
+        <ul class="foot_ul_li">
+        	<li><a href="#">国美集团</a></li>
+        	<li><a href="#">国美管家</a></li>
+        	<li><a href="#">关于国美</a></li>
+        	<li><a href="#">加入我们</a></li>
+        	<li>|</li>
+        	<li><a href="#">品牌大全</a></li>
+        	<li><a href="#">商品专题</a></li>
+        	<li><a href="#">商品词</a></li>
+        	<li><a href="#">热词搜索</a></li>
+        	<li><a href="#">友情链接</a></li>
+        	<li><a href="#">风险监测</a></li>
+        	<li>|</li>
+        	<li><a href="#">销售联盟</a></li>
+        	<li><a href="#">商家入驻</a></li>
+        	<li><a href="#">广告营销</a></li>
+        </ul>
+        <p class="foot_p_1">本公司游戏产品适合18岁以上成年人使用  违法和不良信息举报电话：021-39900132  
+        	<a href="#">互联网药品信息服务资格证编号（沪）-经营性-2019-0006</a>
+        </p>
+        <p class="foot_p_1">网络食品销售第三方平台提供者备案：沪网食备A0015号   
+        	<a href="#">网络文化经营许可证沪网文[2017]5537-436号</a>
+        	<a href="#"> 增值电信业务经营许可证</a>
+        </p>
+        <p class="foot_p_1">客服电话:4008113333     
+        	<a href="#"> 沪ICP备11009419号/京ICP备 19011786号</a>
+        	<a href="#"> 京B2-20191290</a>
+        	<a href="#"> 经营执照</a>
+        	<a href="#"> 营业执照</a>
+        	<a href="#"> 出版物经营许可证</a>
+        </p>
+        <p class="foot_p_1">©2000-2019  国美在线电子商务有限公司版权所有     
+        	<a href="#"> 京公网安备 11010502038379号</a>
+        </p>
+        <div class="foot_bot_box">
+        	<a href="#">
+        		<p>经营性网站备案信息</p>
+        	</a>
+        	<a href="#">
+        		<p>可信网站信用评价</p>
+        	</a>
+        	<a href="#">
+        		<p>诚信网站</p>
+        	</a>
+        	<a href="#">
+        		<p>朝阳网络警察</p>
+        	</a>
+        	<a href="#">
+        		<p>网购大家评</p>
+        	</a>
+        	<a href="#">
+        		<p>上海市互联网违法和不良信息举报中心</p>
+        	</a>
+        </div>
+	</div>
+</div>
 
 </body>
 
