完善了购物车，开始了商品详情

--- a/shopping.html
+++ b/shopping.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="css/index.css">
 <title>商品详情</title>
 </head>
-<body>
+<body style="height: 2000px;">
  <!-- 头部 -->
 <!-- header -->
 <header>
@@ -360,7 +360,7 @@
 					<a href="#"></a>
 				</div>
 			</div>
-			<div class="top_input_box">
+			<div class="top_input_box top_input_box_sho">
 				<div class="shopping_input_gduo">
 					<ul class="shopping_ul_dpu">
 						<li id="shangpingId_ul_sp" class="sh_bg_1">商品</li>
@@ -377,19 +377,17 @@
 			 	<form action="javascript:;" name="search-form">
 					<input id="idja" name="search-content" type="text" placeholder="JavaScript">
 				</form>
-				<input type="submit" value="搜 索">
+				<input type="submit" value="搜全站">
+				<input type="submit" value="搜本站">
 
 				<a class="a_maiKeFeng_bg" href="#"></a>
 				<ul id="search-list"></ul>
 				<ul id="inputBottomUl" class="input_bottom_ul">
-					<li><a href="#">全场抢家电</a></li>
-					<li><a href="#">满千减百</a></li>
-					<li><a href="#">电脑2599</a></li>
-					<li><a href="#">立减300</a></li>
-					<li><a href="#">手机分期购</a></li>
-					<li><a href="#">彩带领券</a></li>
-					<li><a href="#">厨房卫浴</a></li>
-					<li><a href="#">javascript</a></li>
+					<li><a href="#">领券享优惠</a></li>
+					<li><a href="#">三星S10</a></li>
+					<li><a href="#">华为P30</a></li>
+					<li><a href="#">荣耀20</a></li>
+					<li><a href="#">iPhoneXR</a></li>
 				</ul>
 			</div>
 			<div class="top_shopping_car">
@@ -1025,12 +1023,48 @@
 	</div> -->
 </header>   
 
+<!-- 店铺名 -->
+<!-- store -->
+<div class="store">
+	<div class="store_box">
+		<a href="#"></a>
+	</div>
+</div>
+<!-- 商品系列 -->
+<!-- series -->
+<div class="serise">
+	<div class="series_box">
+
+	</div>
+</div>
+
+<!-- 导航条 -->
+<!-- shoppingNav -->
+<div class="shoppingNav">
+	<div class="shoppingNav_box">
+		
+	</div>
+</div>
+<!-- 放大镜 -->
+<!-- glass -->
+<div class="glass">
+	<div class="glass_box">
+		<div id="jingBoxId" class="jing_box">
+
+		</div>
+		<!-- <div class="shopping_ul_box">
+
+		</div> -->
+	</div>
+</div>
+
 </body>
 </html>
+<script type="text/javascript" src="js/Njing.js"></script>
 <script type="text/javascript" src="js/cookieTools.js"></script>
+<script type="text/javascript" src="js/Tools.js"></script>
 <script type="text/javascript" src="js/jquery-1.8.3.min.js"></script>
+<script type="text/javascript" src="js/checkAll.js"></script>
 <script type="text/javascript" src="js/index.js"></script>
-<!-- <script type="text/javascript" src="js/index.js"></script> -->
-
-
-<!-- <script type="text/javascript" src="js/shopping.js"></script> -->
+<script type="text/javascript" src="js/shopping.js"></script>
+<script type="text/javascript" src="js/insertTaoBao.js"></script>
