--- a/index.html
+++ b/index.html
@@ -1394,7 +1394,7 @@
 					</div>
 					<div id="storeyBannShopp" class="storey_bann_shopp">
 						<ul>
-							<li><a href="#"><img src="indexImg/banner_big_1.jpg"></a></li>
+							<li><a href="shopping.html"><img src="indexImg/banner_big_1.jpg"></a></li>
 							<li><a href="#"><img src="indexImg/banner_big_2.jpg"></a></li>
 							<li><a href="#"><img src="indexImg/banner_big_3.jpg"></a></li>
 							<li><a href="#"><img src="indexImg/banner_big_4.jpg"></a></li>
