给首页连接了数据库 开始做了商品详情页 面向了放大镜

--- a/shopping.html
+++ b/shopping.html
@@ -1049,22 +1049,28 @@
 <!-- glass -->
 <div class="glass">
 	<div class="glass_box">
-		<div id="jingBoxId" class="jing_box">
+		<div class="jing_box">
+			<div class="jing_box_left">
+				<div  id="jingBoxId" class="bigBox">
 
+				</div>
+			</div>
+			<div class="jing_box_right">
+
+			</div>
 		</div>
-		<!-- <div class="shopping_ul_box">
-
-		</div> -->
+		
 	</div>
 </div>
 
 </body>
 </html>
+<script type="text/javascript" src="js/getStyle.js"></script>
 <script type="text/javascript" src="js/Njing.js"></script>
 <script type="text/javascript" src="js/cookieTools.js"></script>
 <script type="text/javascript" src="js/Tools.js"></script>
 <script type="text/javascript" src="js/jquery-1.8.3.min.js"></script>
 <script type="text/javascript" src="js/checkAll.js"></script>
-<script type="text/javascript" src="js/index.js"></script>
+<script type="text/javascript" src="js/index.js?p=11"></script>
 <script type="text/javascript" src="js/shopping.js"></script>
 <script type="text/javascript" src="js/insertTaoBao.js"></script>
